# komuscup24-public

./: README.md
api/: codegame.md  debugging.md  model.md
clients/cpp/: CMakeLists.txt  DebugInterface.cpp  DebugInterface.hpp  MyStrategy.cpp  MyStrategy.hpp  main.cpp
clients/cpp/codegame/: ClientMessage.hpp  ServerMessage.cpp
clients/cpp/debugging/: DebugCommand.hpp  DebugData.hpp  DebugState.hpp
clients/cpp/model/: CityCell.cpp  CityCell.hpp  Constants.cpp  Constants.hpp  DebugData.cpp  DebugData.hpp  MinMaxRangeLong.cpp  MinMaxRangeLong.hpp  Order.cpp  Order.hpp  Player.cpp  Player.hpp  PlayerView.cpp  PlayerView.hpp  Vec2Int.cpp  Vec2Int.hpp  Vehicle.hpp  VehicleOrder.cpp  VehicleOrder.hpp  VehicleType.cpp  VehicleType.hpp
clients/cpp_clang/: CMakeLists.txt  DebugInterface.hpp  entrypoint.sh  main.cpp
clients/cpp_clang/codegame/: ServerMessage.hpp
clients/cpp_clang/debugging/: DebugCommand.cpp  DebugData.cpp  DebugState.cpp
clients/cpp_clang/model/: CityCell.hpp  CityType.cpp  CityType.hpp  DebugState.cpp  DebugState.hpp  Player.hpp  PlayerView.hpp  Quest.cpp  Quest.hpp  Traffic.cpp  Traffic.hpp  Vec2Double.cpp  Vec2Double.hpp  Vehicle.cpp  VehicleType.hpp
clients/csharp/: DebugInterface.cs  MyStrategy.cs  Runner.cs  entrypoint.sh
clients/csharp/Model/: Order.cs  (+15 more)
clients/dlang/: dub.json  entrypoint.sh
clients/fsharp/: DebugInterface.fs  Komus24.fsproj  MyStrategy.fs  Runner.fs  entrypoint.sh
clients/go/: entrypoint.sh  go.mod  main.go  my_strategy.go
clients/haskell/: entrypoint.sh  package.yaml
clients/java/: entrypoint.sh  pom.xml
clients/java_graal/: entrypoint.sh  pom.xml
clients/javascript/: debug-interface.js  entrypoint.sh  main.js  my-strategy.js  package.json
clients/kotlin/: entrypoint.sh  pom.xml
clients/kotlin_graal/: entrypoint.sh  pom.xml
clients/pascal/: Komus24.dpr  Komus24.lpi  MyStrategy.pas  entrypoint.sh
clients/php/: DebugInterface.php  Main.php  MyStrategy.php  entrypoint.sh
clients/python/: Dockerfile  entrypoint.sh  main.py  my_strategy.py
clients/python_pypy/: debug_interface.py  entrypoint.sh  main.py
clients/ruby/: debug_interface.rb  debugging.rb  entrypoint.sh  main.rb  model.rb  my_strategy.rb
clients/rust/: Cargo.toml  entrypoint.sh
clients/scala/: entrypoint.sh  pom.xml
clients/swift/: Package.swift  entrypoint.sh
clients/typescript/: entrypoint.sh  package.json
mech-solutions/Roman Frolenkov/: 1047384_final_round_5.json
mech-solutions/Абросимов Николай/: 1047155_Final_5.json
mech-solutions/Валерия Нуйкина/: 1047274_default_06116661_final4.json
mech-solutions/Глеб Созаруков/: 1046534_big.json
mech-solutions/Гусаров Артем/: 1046542_default.json
mech-solutions/Житников Олег/: 1046928_default_v2.3.json
mech-solutions/Захарова Алена/: 1047331_asaf_41.json
mech-solutions/Зубков Антон/: 1047648_finalscript.json
mech-solutions/Кузнецов Андрей/: 1047613_trek01.json
mech-solutions/Кузов Егор/: 1046969_8default.json
mech-solutions/Моторогин Андрей/: 1045686_circle-mapwins.json
mech-solutions/Никулин Александр/: 1047309_default4.json
mech-solutions/Нина Мякотникова/: 1046927_test2_bus.json
mech-solutions/Романова Юлия/: 1047034_default1.json
mech-solutions/Сабина Муссаева/: 1047617_map8.json
mech-solutions/Степаненко Евгений/: 1046054_SE_6F13.json
mech-solutions/Тимралеев Камиль/: 1047370_default2.json
mech-solutions/Чубова Любовь/: 1047349_7732149default22.json
(+363 files in other folders)
